--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Backend de Fit Factory</title>
+    <title>Backend de Gym Centre</title>
   </head>
   <body>
-    <h1>Bienvenido al backend de Fit Factory</h1>
+    <h1>Bienvenido al backend de Gym Centre</h1>
   </body>
 </html>
